SERVER-76720 Don't send session tied to the current moveChunk during session migration

(cherry picked from commit 22707c4f3a2c26529d5487e4d036aa3cbcb3ff2e)