src/mongo/db/s/migration_chunk_cloner_source.cpp
@@ -339,7 +339,7 @@ Status MigrationChunkClonerSource::startClone(OperationContext* opCtx,
     invariant(!opCtx->lockState()->isLocked());
 
     if (_sessionCatalogSource) {
-        _sessionCatalogSource->init(opCtx);
+        _sessionCatalogSource->init(opCtx, lsid);
 
         // Prime up the session migration source if there are oplog entries to migrate.
         _sessionCatalogSource->fetchNextOplog(opCtx);
